main html and design made

--- a/index.html
+++ b/index.html
@@ -3,9 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
     <title>My Library</title>
     <link rel="stylesheet" href="style.css" />
     <script src="javascript.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p class="main logo">Library</p>
+      <nav class="nav">
+        <ul>
+          <li><a href="#">New Book</a></li>
+          <li><a href="#">Delete Book</a></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="container">
+      <div class="card-container">
+        <div class="card">
+          <p class="name">Rangers Ordem dos Arqueiros</p>
+          <p class="author">John Flanagam</p>
+          <div class="rodape">
+            <p class="readStatus">READ</p>
+            <p class="pages">266 pages</p>
+          </div>
+        </div>
+        <div class="card">
+          <p class="name">Rangers Ordem dos Arqueiros</p>
+          <p class="author">John Flanagam</p>
+          <div class="rodape">
+            <p class="notRead">NOT READ</p>
+            <p class="pages">266 pages</p>
+          </div>
+        </div>
+        <div class="card">
+          <p class="name">Rangers Ordem dos Arqueiros</p>
+          <p class="author">John Flanagam</p>
+          <div class="rodape">
+            <p class="readStatus">READ</p>
+            <p class="pages">266 pages</p>
+          </div>
+        </div>
+        <div class="card">
+          <p class="name">Rangers Ordem dos Arqueiros</p>
+          <p class="author">John Flanagam</p>
+          <div class="rodape">
+            <p class="notRead">NOT READ</p>
+            <p class="pages">266 pages</p>
+          </div>
+        </div>
+        <div class="card">
+          <p class="name">Rangers Ordem dos Arqueiros</p>
+          <p class="author">John Flanagam</p>
+          <div class="rodape">
+            <p class="readStatus">READ</p>
+            <p class="pages">266 pages</p>
+          </div>
+        </div>
+        <div class="card">
+          <p class="name">Rangers Ordem dos Arqueiros</p>
+          <p class="author">John Flanagam</p>
+          <div class="rodape">
+            <p class="readStatus">READ</p>
+            <p class="pages">266 pages</p>
+          </div>
+        </div>
+        <div class="card">
+          <p class="name">Rangers Ordem dos Arqueiros</p>
+          <p class="author">John Flanagam</p>
+          <div class="rodape">
+            <p class="notRead">NOT READ</p>
+            <p class="pages">266 pages</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
