--- a/index.html
+++ b/index.html
@@ -26,63 +26,32 @@
     </header>
     <div class="container">
       <div class="card-container">
-        <div class="card">
-          <p class="name">Rangers Ordem dos Arqueiros</p>
-          <p class="author">John Flanagam</p>
-          <div class="rodape">
-            <p class="readStatus">READ</p>
-            <p class="pages">266 pages</p>
-          </div>
-        </div>
-        <div class="card">
-          <p class="name">Rangers Ordem dos Arqueiros</p>
-          <p class="author">John Flanagam</p>
-          <div class="rodape">
-            <p class="notRead">NOT READ</p>
-            <p class="pages">266 pages</p>
-          </div>
-        </div>
-        <div class="card">
-          <p class="name">Rangers Ordem dos Arqueiros</p>
-          <p class="author">John Flanagam</p>
-          <div class="rodape">
-            <p class="readStatus">READ</p>
-            <p class="pages">266 pages</p>
-          </div>
-        </div>
-        <div class="card">
-          <p class="name">Rangers Ordem dos Arqueiros</p>
-          <p class="author">John Flanagam</p>
-          <div class="rodape">
-            <p class="notRead">NOT READ</p>
-            <p class="pages">266 pages</p>
-          </div>
-        </div>
-        <div class="card">
-          <p class="name">Rangers Ordem dos Arqueiros</p>
-          <p class="author">John Flanagam</p>
-          <div class="rodape">
-            <p class="readStatus">READ</p>
-            <p class="pages">266 pages</p>
-          </div>
-        </div>
-        <div class="card">
-          <p class="name">Rangers Ordem dos Arqueiros</p>
-          <p class="author">John Flanagam</p>
-          <div class="rodape">
-            <p class="readStatus">READ</p>
-            <p class="pages">266 pages</p>
-          </div>
-        </div>
-        <div class="card">
-          <p class="name">Rangers Ordem dos Arqueiros</p>
-          <p class="author">John Flanagam</p>
-          <div class="rodape">
-            <p class="notRead">NOT READ</p>
-            <p class="pages">266 pages</p>
-          </div>
+        <!-- INSERT BY JAVASCRIPT -->
+        <div class="card" |>
+          <button class="btn open-dialog">+</button>
         </div>
       </div>
     </div>
   </body>
+  <dialog class="modal">
+    <h2>ADD A NEW BOOK</h2>
+    <div class="dialog">
+      <form class="formdialog" action="" method="get">
+        <input name="title" type="text" placeholder="Title..." />
+        <input name="author" type="text" placeholder="Author..." />
+        <input name="pages" type="number" placeholder="Pages" min="0" />
+        <div class="checkbox">
+          <label>Already read the Book?</label>
+          <select id="read">
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+          </select>
+        </div>
+        <div class="btns">
+          <button type="submit" class="dialog-confirm">Confirm</button>
+          <button class="close-modal" type="button">Close</button>
+        </div>
+      </form>
+    </div>
+  </dialog>
 </html>
