--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
     <div class="container">
       <div class="card-container">
         <!-- INSERT BY JAVASCRIPT -->
+        <div class="card" data-book1="randomnuber">
+          <div class="title">
+            <div class="text">
+              <p class="name">Test</p>
+              <p class="author">Test</p>
+            </div>
+            <a href="#" id="delete">
+              <img src="icons8-lixo-128.png" />
+            </a>
+          </div>
+          <div class="rodape">Test</div>
+        </div>
+
         <div class="card" |>
           <button class="btn open-dialog">+</button>
         </div>
