Added the functionality to change between READ and NOT READ

--- a/index.html
+++ b/index.html
@@ -16,29 +16,11 @@
   <body>
     <header>
       <p class="main logo">Library</p>
-      <nav class="nav">
-        <ul>
-          <li><a href="#">New Book</a></li>
-          <li><a href="#">Delete Book</a></li>
-          <li><a href="#">Logout</a></li>
-        </ul>
-      </nav>
+      <nav class="nav"></nav>
     </header>
     <div class="container">
       <div class="card-container">
         <!-- INSERT BY JAVASCRIPT -->
-        <div class="card" data-book1="randomnuber">
-          <div class="title">
-            <div class="text">
-              <p class="name">Test</p>
-              <p class="author">Test</p>
-            </div>
-            <a href="#" id="delete">
-              <img src="icons8-lixo-128.png" />
-            </a>
-          </div>
-          <div class="rodape">Test</div>
-        </div>
 
         <div class="card" |>
           <button class="btn open-dialog">+</button>
